--- a/index.html
+++ b/index.html
@@ -177,13 +177,15 @@ spanning an entire year.</i></p>
 <ul> 
 <li>
 	
-	<p> 	 		 	
-		<img border="0" src="abhik-pictures/ICSE2023.jpg" width="480" height="360"></p>
 	
-	
-	<p><font face="Arial">
-	Most Influential Paper Award talk at International Conference on Software Engineering (ICSE) 2023 for ICSE 2013 paper, see <b><a href ="https://www.youtube.com/watch?v=v9EQolTQwlg"> VIDEO</a></b>.</p>
+		<p><font face="Arial">
+	Most Influential Paper Award talk at International Conference on Software Engineering (ICSE) 2023 for ICSE 2013 paper, 
+			see <b><a href ="https://www.youtube.com/watch?v=v9EQolTQwlg"> VIDEO</a></b>.</p>
 
+		<p><img border="0" src="abhik-pictures/ICSE2023.jpg" width="480" height="360"></p>
+	
+	
+	
 	<iframe src="https://www.slideshare.net/slideshow/embed_code/key/uCHG4cb9oMpPmm?hostedIn=slideshare&page=upload" 
 		width="500" height="420" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 
