--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ Thanks to the software engineering community!</p>
 		   
 <img border="0" src="abhik-pictures/ICSE24.JPG" width="480" height="320">
 	   <p>
-<i>ICSE2024 involved major changes for the first time, major revisions of papers, and submissions of papers in multiple cycles 
-spanning an entire year.</i></p> 
+ICSE2024 involved major changes for the first time, major revisions of papers, and submissions of papers in multiple cycles 
+spanning an entire year.</p> 
 
 	   </li>
 	   
