--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
 		
 <a href = "https://conf.researchr.org/home/icse-2024"><b>ICSE 2024</b></a>, 
 the 46th International Conference on Software Engineering, was held in Lisbon in April 2024 after about 
-three years of discussions and planning led by Abhik and Margaret-Anne Storey. ~1000+ submissions, 
-234 accepted papers, ~225 PC members, 12 area chairs spanning software engineering. 
-Thanks to the software engineering community!</p>
+three years of discussions and planning with my co-chair Margaret-Anne Storey. ~1100 submissions, 
+234 accepted papers, ~225 PC members, 12 area chairs spanning the entire spectrum of software engineering,
+and 2000+ conference attendees! Thanks to the software engineering community for the valuable engagement!!</p>
 		   
 <img border="0" src="abhik-pictures/ICSE24.JPG" width="480" height="320">
 	   <p>
-ICSE2024 involved major changes for the first time, major revisions of papers, and submissions of papers in multiple cycles 
+ICSE2024 involved major changes to the conference for the first time, allowing major revisions of papers, and allowing submissions of papers in multiple cycles 
 spanning an entire year.</p> 
 
 	   </li>
