--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
 		fuzzing and symbolic execution. These have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for program repair. Doctoral students graduated fom his 
-		research team have taken up faculty positions in many academic institutions including 
+		(Test-of-time award) for program repair, and IEEE TCSE New Directions Award 2022 for contributions to symbolic execution. 
+		Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
 		<a href="https://mboehme.github.io/">Max Planck Institute</a>,
 		<a href="https://mechtaev.com/">University College London</a>,
 		<a href="https://thuanpv.github.io/">University of Melbourne</a>, 
