--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		<b><a href ="https://github.com/nus-apr/auto-code-rover">AutoCodeRover</a></b>, 
-		autonomous software engineer to fix GitHub issues</i>,
-		<a href ="https://arxiv.org/abs/2404.05427"><b>arxiv</b>, 
+		<b><a href ="https://autocoderover.dev/">AutoCodeRover</a></b>, 
+		Autonomous software engineering</i>,
+		<a href ="https://arxiv.org/abs/2404.05427"><b>arxiv</b>
 		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>.<br>
 	</font>
 	<br>
