--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li> <font face="Arial">
 		<b><a href ="https://autocoderover.dev/">AutoCodeRover</a></b>, 
 		Autonomous software engineering</i>,
-		<a href ="https://arxiv.org/abs/2404.05427"><b>arxiv</b>
+		<a href ="https://arxiv.org/abs/2404.05427">arxiv</a>, 
 		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>.<br>
 	</font>
 	<br>
