--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 	</font>
 	<br>
 
-		<li> Upcoming
-		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> on Program Repair. 
-		<br>
+		<li> <font face="Arial">Upcoming
+		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> on Program Repair. </font>
+		<br><br>
 		
 		<li>
 		<font face="Arial">
