--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
 	<br>
 
 		<li> <font face="Arial">Upcoming
-		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> on Program Repair. </font>
+		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (October 2024) on Program Repair. </font>
 		<br><br>
 		
 		<li>
 		<font face="Arial">
-		<a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting</a> (Jan 25) on Trusted Automatic Programming
-	        to bring community together.<br>
+		<a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting</a> (Jan 25) on Trusted Automatic Programming.<br>
 			
 		</font>
 		<br>
