--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 	<ul>
         <li> <font face="Arial">
 		<b><a href ="https://autocoderover.dev/">AutoCodeRover</a></b>, 
-		Autonomous software engineering</i>,
-		<a href ="https://arxiv.org/abs/2404.05427">arxiv</a>, 
+		Autonomous software engineer</i>,
 		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>.<br>
 	</font>
 	<br>
