--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 	</font>
 	<br>
 
-		<li> <font face="Arial">Upcoming
-		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (Oct 24) on Program Repair. </font>
+		<li> <font face="Arial">
+		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (Oct 24) on Automated
+		Program Repair. </font>
 		<br><br>
 		
 		<li>
