--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	<ul>
         <li> <font face="Arial">
 		<b><a href ="https://autocoderover.dev/">AutoCodeRover</a></b>, 
-		Autonomous software engineer</i>,
-		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>.<br>
+		Autonomous SWE</i>
+		(<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
 	</font>
 	<br>
 
