--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 		(<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
 	</font>
 	<br>
-
+		
+<li> <font face="Arial">
+		<b><a href ="https://arxiv.org/abs/2405.02213">Vision for Automatic Programming in 2030</a>, Invited and to appear.
+			<br>
+	</font>
+	<br>
 		<li> <font face="Arial">
 		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (Oct 24) on Automated
 		Program Repair. </font>
