--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<br>
 		
 <li> <font face="Arial">
-		<a href ="https://arxiv.org/abs/2405.02213">Vision for Automatic Programming in 2030</a>, Invited and to appear.
+		<a href ="https://arxiv.org/abs/2405.02213">Vision for Automatic Programming</a>, Invited and to appear.
 			<br>
 	</font>
 	<br>
