--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 		<a href="https://mboehme.github.io/">Max Planck Institute</a>,
 		<a href="https://mechtaev.com/">University College London</a>,
 		<a href="https://thuanpv.github.io/">University of Melbourne</a>, 
-		<a href="https://www.shinhwei.com/">Concordia University</a> and 
-		<a href="https://www.comp.nus.edu.sg/~vivy/">NUS</a>. 
+		<a href="https://www.shinhwei.com/">Concordia University</a>, 
+		<a href="https://www.comp.nus.edu.sg/~vivy/">NUS</a>, and <a href ="https://gaoxiang9430.github.io/">Beihang U.</a>. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. Currently, he serves as
 		the chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. 
