--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<ul>
         <li> <font face="Arial">
 		<b><a href ="https://autocoderover.dev/">AutoCodeRover</a></b>, 
-		Autonomous SWE</i>
+		AI Software Engineer</i>
 		(<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
 	</font>
 	<br>
