--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		<b><a href ="https://autocoderover.dev/">AutoCodeRover</a></b>, 
+		<a href ="https://autocoderover.dev/">AutoCodeRover</a>, 
 		AI Software Engineer</i>
-		(<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
+		(<a href = "https://x.com/AbhikRoychoudh1/status/1804147159845290487">Latest Release</a>,
+		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
 	</font>
 	<br>
 		
