--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		<a href ="https://autocoderover.dev/">AutoCodeRover</a>, 
-		(<a href = "https://x.com/AbhikRoychoudh1/status/1804147159845290487">Latest Release</a>,
+		AutoCodeRover, LLM as SWE: (<a href="https://autocoderover.dev"> Website</a>, 
 		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
 	</font>
 	<br>
