--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		AutoCodeRover, LLM as SWE: (<a href="https://autocoderover.dev"> Website</a>, 
+		AutoCodeRover, LLM as SWE (<a href="https://autocoderover.dev">Website</a>, 
 		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
 	</font>
 	<br>
