--- a/papers.html
+++ b/papers.html
@@ -21,6 +21,13 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM International Conference on the Foundations of Software 
 		Engineering (FSE) 2024. </p> 
 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Timing Side-Channel Mitigation via Automated Program Repair
+		(<a href="./pdf/TOSEM24_Pendulum.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Yannic Noller, Saied Tizpaz-Niari, Sudipta Chattopadhyay, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2024. </p> 
+
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR 24]</b></p>
