--- a/papers.html
+++ b/papers.html
@@ -13,6 +13,15 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Haifeng Ruan, Zhiyu Fan, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM International Symposium on Software Testing and Analysis (ISSTA) 2024, 
 		arXiv:2404.05427, Publicly released 8th April 2024. </p> 
+
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Oracle-guided Program Selection from Large Language Models 
+		</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Haifeng Ruan, Sergey Mechtaev, 
+ Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM International Symposium on Software Testing and Analysis (ISSTA) 2024.</p> 
+	 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[FSE24]</b></p>
