--- a/index.html
+++ b/index.html
@@ -198,18 +198,10 @@ spanning an entire year.</p>
 </li>
 <br>
 <li><p><font face="Arial">
-[<a href="https://youtu.be/Msr77fg1uhE"><b>VIDEO</b></a>] (Part of) a talk given for PhD students at 
-	National University of Singapore PhD open Day. <br> 
-	Similar talk was given at Doctoral Sympoium of various conferences.</p>
+"Conducting Exciting Academic Research in Computer Science", Talk given in International Conference on Foundations of Software 
+	Engineering (FSE) 2024, New Faculty Symposium.</p>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/aVoYio0BHelIVU" width="500" height="407" frameborder="0" marginwidth="0"
-	marginheight="0" 
-	scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> 
-	<div style="margin-bottom:5px"><font size="2"> <strong> 
-		<a href="//www.slideshare.net/roychoudhury/nus-phd-eopen-day-2020-239009768" title="NUS PhD e-open day 2020" target="_blank">
-			NUS PhD e-open day 2020</a> </strong> from <strong><a href="https://www.slideshare.net/roychoudhury" target="_blank">
-		Abhik Roychoudhury</a></strong></font> </div>
-
+	<iframe src="https://www.slideshare.net/slideshow/embed_code/key/wCysziXuJkcFUp?hostedIn=slideshare&page=upload" width="476" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 
 </li>
 <br>
