--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ spanning an entire year.</p>
 </li>
 <br>
 <li><p><font face="Arial">
-"Conducting Exciting Academic Research in Computer Science", Talk given in International Conference on Foundations of Software 
+"Conducting Exciting Academic Research in Computer Science", Talk given in Intl. Conf. on Foundations of Software 
 	Engineering (FSE) 2024, New Faculty Symposium.</p>
 
 	<iframe src="https://www.slideshare.net/slideshow/embed_code/key/wCysziXuJkcFUp?hostedIn=slideshare&page=upload" width="476" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
