--- a/papers.html
+++ b/papers.html
@@ -16,7 +16,7 @@
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA24]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Oracle-guided Program Selection from Large Language Models 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Oracle-guided Program Selection from Large Language Models (<a href="./pdf/ISSTA24_Oracle_Guided.pdf">pdf</a>)
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Haifeng Ruan, Sergey Mechtaev, 
  Abhik Roychoudhury</p>
