--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar Profile]</a></font></li>
-	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS</a> Group]</font></li>
+	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS]</a></font></li>
 	</ul>
 	 	
 <hr>   	
