--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	   
 <ul>
 	<li>
-	   <p> 	 		 	
+	   <p> <font face="Arial">	 		 	
 		
 <a href = "https://conf.researchr.org/home/icse-2024"><b>ICSE 2024</b></a>, 
 the 46th International Conference on Software Engineering, was held in Lisbon in April 2024 after about 
