--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ spanning an entire year.
 </li>
 <br>
 <li><p><font face="Arial">
-"Imagination in Computer Science Research", Advice to Junior Faculty at Intl. Conf. on Foundations of Software 
+<a href ="https://www.slideshare.net/slideshow/imagination-in-computer-science-research/270183360"> "Imagination in Computer Science Research"</a>, Advice to Junior Faculty at Intl. Conf. on Foundations of Software 
 	Engineering (FSE) 2024.</p>
 
 <iframe src="https://www.slideshare.net/slideshow/embed_code/key/MJfy2aeAOX8rfU?hostedIn=slideshare&page=upload" width="476" height="400" 
