--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<H3><font face="Arial"><br>
 		Abhik Roychoudhury</font><font size="5" face="Arial">       </font> 			</H3> 	
 		<H3>
-		<font face="Arial">Provost's Chair Professor <br> 
+		<font face="Arial", size="2">Provost's Chair Professor <br> 
 			School of Computing<br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<br><font face="Arial" size="2">
