--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<img border="0" src="abhikpicture-cropped.jpg" width="296" height="231"></font></TD>      		 	
 	<TD width="340" bordercolor="#000000" bordercolorlight="#000000" bordercolordark="#000000">     
 		<DIV align=left>         <blockquote>            			
-		<H3><font face="Arial"><br>
+		<H3><font face="Arial" size = "2"><br>
 		Abhik Roychoudhury</font>			</H3> 	
 		<H3>
-		<font face="Arial">Provost's Chair Professor <br> 
+		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			School of Computing<br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<br><font face="Arial" size="2">
