--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<TD width="340" bordercolor="#000000" bordercolorlight="#000000" bordercolordark="#000000">     
 		<DIV align=left>         <blockquote>          
 
-		<H3><font face="Arial" size = "2"><br>
+		<H3><font face="Arial" size = "4"><br>
 		Abhik Roychoudhury</font>			</H3> 	
 	
 		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			School of Computing<br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font>
-		<br><font face="Arial" size="2">
+		<br><br>
+		<font face="Arial" size="2">
 		<a href="https://nus-apr.github.io/">APR</a><br>
 		<a href="https://nus-tss.github.io/fuzzing/">Fuzzing</a><br>	
 		<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Descartes</a><br>
