--- a/papers.html
+++ b/papers.html
@@ -6,10 +6,20 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
 
+
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CCS24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Program Environment Fuzzing
+		(<a href="https://arxiv.org/abs/2404.13951"><i>Pre-print</i></a>, 
+		<a href="https://github.com/GJDuck/EnvFuzz"><i>Tool</i></a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Gregory J. Duck, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 31th ACM Conference on Computer and Communications Security (CCS), 2024.</p> 
+
  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> AutoCodeRover: Autonomous Program Improvement
-		(<a href="https://arxiv.org/abs/2404.05427"><i>Pre-print</i></a>, <a href="https://github.com/nus-apr/auto-code-rover"><i>GitHub</i></a>)</b></p>
+		(<a href="https://arxiv.org/abs/2404.05427"><i>Pre-print</i></a>, 
+		<a href="https://github.com/nus-apr/auto-code-rover"><i>Tool</i></a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Haifeng Ruan, Zhiyu Fan, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM International Symposium on Software Testing and Analysis (ISSTA) 2024, 
 		arXiv:2404.05427, Publicly released 8th April 2024. </p> 
