--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
 	&nbsp;<a href="https://nus-tss.github.io/">[TSS GROUP]</a> &nbsp;
-		<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">[PUBLICATIONS]</a>&nbsp;
+		<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">[Google Scholar]</a>&nbsp;
+	 a href="papers.html">[PAPERS]</a>&nbsp;
 	 <a href="service.html">[SERVICE]</a>&nbsp;
 		<a href="teaching.html">[TEACHING]</a>&nbsp;
 	</font></b>
