--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
 	&nbsp;<a href="https://nus-tss.github.io/">[TSS Group]</a> &nbsp;
 		<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">[Google Scholar]</a>&nbsp;
-	 a href="papers.html">[PAPERS]</a>&nbsp;
+	 <a href="papers.html">[PAPERS]</a>&nbsp;
 	 <a href="service.html">[SERVICE]</a>&nbsp;
 		<a href="teaching.html">[TEACHING]</a>&nbsp;
 	</font></b>
