--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution. 
 		Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
-		<a href="https://mboehme.github.io/">Max Planck Institute</a>,
-		<a href="https://mechtaev.com/">University College London</a>,
-		<a href="https://thuanpv.github.io/">University of Melbourne</a>, 
-		<a href="https://www.shinhwei.com/">Concordia University</a>, 
-		<a href="https://www.comp.nus.edu.sg/~vivy/">NUS</a>, and <a href ="https://gaoxiang9430.github.io/">Beihang University</a>. 
+		Max Planck Institute,
+		University College London,
+		University of Melbourne, NUS,
+		Concordia University,
+		Peking University, and Beihang University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. Currently, he serves as
 		the chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. 
