--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		AutoCodeRover, LLM as SWE (<a href="https://autocoderover.dev">Website</a>, 
-		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>).<br>
+		<a href="https://autocoderover.dev">AutoCodeRover</a>, AI SWE - 
+		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>,
+		<a href = "https://arxiv.org/abs/2408.02232"> SpecRover<a> as latest work.<br>
 	</font>
 	<br>
 		
@@ -62,17 +63,7 @@
 			<br>
 	</font>
 	<br>
-		<li> <font face="Arial">
-		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (Oct 24) on Automated
-		Program Repair. </font>
-		<br><br>
-		
-		<li>
-		<font face="Arial">
-		<a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting</a> (Jan 25) on Trusted Automatic Programming.<br>
-			
-		</font>
-		<br>
+	
 		
 			<li>
 		<font face="Arial">
