--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 		<a href = "https://arxiv.org/abs/2408.02232"> SpecRover<a> as latest work.<br>
 	</font>
 	<br>
-		
+
+	<li>
+	<font face="Arial"> <a href="https://nus-its.github.io">Intelligent Tutoring System</a>, 
+		application of program repair combined with genAI.
+	</font>
+		<br>
 
 			<li>
 		<font face="Arial">
