--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	<li>
 	<font face="Arial"> <a href="https://nus-its.github.io">Intelligent Tutoring System</a>, 
-		application of program repair combined with genAI.
+		application of program repair combined with genAI.<br>
 	</font>
 		<br>
 
