--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
 	<li>
 	<font face="Arial"> <a href="https://nus-its.github.io">Intelligent Tutoring System</a>, 
-		application of program repair combined with genAI.<br>
-	</font>
+		application of program repair combined with genAI.</font>
+		<br>
+	
 		<br>
 
 			<li>
