--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@
 		Concordia University,
 		Peking University, and Beihang University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
-		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. Currently, he serves as
-		the chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. 
+		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
+		Currently, he serves as
+		chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. He has been an
+		Associate Editor of various journals, including currently serving in 
+		<a href="https://cacm.acm.org/editorial-staff-board/">Communications of the ACM</a> and 
+		<a href="https://dl.acm.org/journal/tosem/editorial-board">TOSEM</a>. 
 		Abhik received his PhD in Computer Science from <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
