--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	        Trustworthy and Secure Software (TSS)</a>. 
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
 		fuzzing and symbolic execution. These have been honored with various awards including an 
-		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
+		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution. 
 		Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute,
