--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 		Max Planck Institute,
 		University College London,
 		University of Melbourne, NUS,
-		Concordia University,
-		Peking University, and Beihang University. 
+		and Peking University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as
