--- a/index.html
+++ b/index.html
@@ -98,12 +98,9 @@
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
 		fuzzing and symbolic execution. These have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution. 
-		Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
-		Max Planck Institute,
-		University College London,
-		University of Melbourne, NUS,
-		and Peking University. 
+		(Test-of-time award) for program repair, IEEE New Directions Award 2022 for contributions to symbolic execution, and the innaugural
+		NUS Outstanding Graduate Mentor Award in 2024. Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
+		Max Planck Institute, University College London, University of Melbourne, NUS, and Peking University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as
