--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
 
 	   
 <ul>
+
+	<li>Honored to be the inaugural recipient of the National University of Singapore (NUS) Outstanding Graduate Mentor Award 2024. 
+		Following is a photo taken at the award ceremony with some past and present students.
+
+		<img border="0" src="abhik-pictures/tss.jpg" width="480" height="320">
+	
 	<li>
 	   <p> <font face="Arial">	 		 	
 		
