--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 
 	<li> <p> <font face="Arial">	
 		Honored to be the inaugural recipient of the National University of Singapore (NUS) Outstanding Graduate Mentor Award 2024. 
-		Following is a photo taken at the award ceremony with some past and present students.
+		Following is a photo taken at the award ceremony with some members and alumni of <a href = "https://nus-tss.github.io/team/">
+			TSS group</a>.
 		 </p>
 
 		<img border="0" src="abhik-pictures/tss.jpg" width="480" height="320">
