--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 	<li> <p> <font face="Arial">	
 		Honored to be the inaugural recipient of the National University of Singapore (NUS) Outstanding Graduate Mentor Award in 2024. 
-		Following is a photo taken at the award ceremony with some members and alumni of <a href = "https://nus-tss.github.io/">
+		Following is a photo taken at the award ceremony with past and present members of <a href = "https://nus-tss.github.io/">
 			TSS group</a>.
 		 </p>
 
