--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for program repair, IEEE New Directions Award 2022 for contributions to symbolic execution.
                 <br><br>
-		Abhik was the inagural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
+		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute, University College London, University of Melbourne, NUS, and Peking University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
