--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>.  
-		His research group is known for contributions to automatic programming and automated program repair, as well as to
-		fuzzing and symbolic execution. These have been honored with various awards including an 
+		His research group is known for foundational contributions to software testing and analysis. Specifically 
+		the team has made contributions to automatic programming and automated program repair, as well as to 
+		fuzz testing and symbolic execution for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for program repair, IEEE New Directions Award 2022 for contributions to symbolic execution.
                 <br><br>
