--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution.
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
-		Max Planck Institute, University College London, University of Melbourne, NUS, and Peking University. 
+		Max Planck Institute, NUS, University College London, University of Melbourne, and Peking University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as
