--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 	        Trustworthy and Secure Software (TSS)</a>.  
 		His research group is known for foundational contributions to software testing and analysis. Specifically 
 		the team has made contributions to automatic programming and automated program repair, as well as to 
-		fuzz testing and symbolic execution for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
+		fuzz testing for finding security vulnerabilities in software systems. These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution.
+		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution 
+		and its usage.
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute, NUS, University College London, University of Melbourne, and Peking University. 
