--- a/papers.html
+++ b/papers.html
@@ -10,7 +10,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> EffFix: Efficient and Effective Repair of Pointer Manipulating Programs
 		(<a href="./pdf/EffixTOSEM25.pdf">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury/p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
 
 
