--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<ul>
         <li> <font face="Arial">
 		<a href="https://autocoderover.dev">AutoCodeRover</a>, AI SWE - 
-		<a href = "https://arxiv.org/abs/2408.02232"> SpecRover<a> as latest work.<br>
+		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>.<br>
 	</font>
 	<br>
 
