--- a/papers.html
+++ b/papers.html
@@ -26,7 +26,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Selectively Uniform Concurrency Testing
 		(<a href="">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Huan Zhao, Dylan Wolff, Umang Mathur, Abhik Roychoudhury/p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Huan Zhao, Dylan Wolff, Umang Mathur, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 30th ACM International Conference on Architectural Support for 
 		Programming Languages and Operating Systems (ASPLOS) 2025. </p> 
 
