--- a/papers.html
+++ b/papers.html
@@ -7,19 +7,25 @@
 	<font face="Arial" size="4" color="#800000">2025</font></i></b></p>
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> EffFix: Efficient and Effective Repair of Pointer Manipulating Programs
-		(<a href="./pdf/EffixTOSEM25.pdf">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> SpecRover: Code Intent Extraction via LLMs
+		(<a href="https://arxiv.org/abs/2408.02232">Paper</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Yuntong Zhang, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th International Conference on Software Engineering (ICSE) 2025. </p>  
 
 
-	 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Automatic Programming: Large Language Models and Beyond 
 		(<a href="https://arxiv.org/abs/2405.02213">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">MR Lyu, B Ray, Abhik Roychoudhury, Shin Hwei Tan, P Thongtanunam</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
+
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> EffFix: Efficient and Effective Repair of Pointer Manipulating Programs
+		(<a href="./pdf/EffixTOSEM25.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
