--- a/papers.html
+++ b/papers.html
@@ -28,7 +28,14 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
 
-	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Selectively Uniform Concurrency Testing
+		(<a href="./pdf/asplos25.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Huan Zhao, Dylan Wolff, Umang Mathur, Abhik Roychoudhury
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 30th ACM International Conference on Architectural Support for 
+		Programming Languages and Operating Systems (ASPLOS) 2025. </p> 
+
 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
