--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		(Test-of-time award) for program repair, and IEEE New Directions Award 2022 for contributions to symbolic execution 
 		and its usage in program repair.
                 <br><br>
-		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated fom his research team have taken up faculty positions in many academic institutions including 
+		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. Doctoral students graduated from his research team have taken up faculty positions in many academic institutions including 
 		Max Planck Institute, NUS, University College London, University of Melbourne, and Peking University. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
