--- a/papers.html
+++ b/papers.html
@@ -15,7 +15,7 @@
 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25-special issue]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Automatic Programming: Large Language Models and Beyond 
 		(<a href="https://arxiv.org/abs/2405.02213">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">MR Lyu, B Ray, Abhik Roychoudhury, Shin Hwei Tan, P Thongtanunam</p>
@@ -27,6 +27,16 @@
 		(<a href="./pdf/EffixTOSEM25.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Andreea Costea, Ridwan Shariffdeen, Davin McCall, Abhik Roychoudhury
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
+
+ <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> 
+		Vulnerability Repair via Concolic Execution and Code Mutations 
+		(<a href="./pdf/CrashRepairTOSEM25.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Christopher Timperley, Yannic Noller, Claire Le Goues, Abhik Roychoudhury
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
+
+	 
 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS25]</b></p>
