--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>.<br>
 	</font>
 	<br>
-
-	
+        <li>
+        <font face="Arial"> 
+	Appointed <a href ="https://www.acm.org/articles/pubs-newsletter/2024/new-editors-in-chief">
+		Editor-in-Chief</a> of ACM Transactions on Software Engineering and Methodology 
+		(<a href="https://dl.acm.org/journal/tosem">TOSEM</a>)</font>
+	</li>
+	<br><br>
 
 			<li>
 		<font face="Arial">
