--- a/index.html
+++ b/index.html
@@ -217,16 +217,21 @@ spanning an entire year.
 <br>
 
 <li><p><font face="Arial">
-Distinguished Lecture at Max-Planck Institute for Software Systems, 
-and KAIST.  <br> Similar talks were given at other venues.
+Distinguished Lecture at Max-Planck Institute and KAIST, 2024.  <br> Similar talks were given at other venues.
 
 </p>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/GGRZ86kz5ON66E" width="500" height="407" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" 
-	allowfullscreen> </iframe> 
 
-<div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/roychoudhury/automated-program-repair-talk-at-mpi-2019" title="Automated Program Repair, Distinguished lecture at MPI 2019" target="_blank">
-	<font size="2">Automated Program Repair, Distinguished lecture at MPI-SWS</font></a><font size="2">
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/7J8WnHhQcdjXF3?hostedIn=slideshare&page=upload" 
+	width="476" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>	
+
+
+<div style="margin-bottom:5px"> 
+	<strong> <a href=
+	"https://www.slideshare.net/slideshow/trusted-automatic-programming-november-2024/273555462" 
+			 title="Trusted Automatic Programming, Distinguished lecture at MPI 2024" 
+			 target="_blank">
+	<font size="2">Trusted Automatic Programming, Distinguished lecture at MPI</font></a><font size="2">
 	</font> </strong> <font size="2">from <strong><a href="//www.slideshare.net/roychoudhury" target="_blank">Abhik Roychoudhury</a></strong> 
 	</font>
 	</li>
