--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ spanning an entire year.
 <br>
 
 <li><p><font face="Arial">
-Distinguished Lecture at Max-Planck Institute and KAIST, 2024.  <br> Similar talks were given at other venues.
+Distinguished Lecture at Max-Planck Institute, 2024.  <br> Similar talks were given at other venues.
 
 </p>
 
