--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<ul>
         <li> <font face="Arial">
 		<a href="https://autocoderover.dev">AutoCodeRover</a>, AI SWE - 
-		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515"Launch</a>, 
+		<a href="https://x.com/AbhikRoychoudh1/status/1777494000611852515">Launch</a>, 
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>,
 		<a href = "https://x.com/AbhikRoychoudh1/status/1860343201653227997">Latest</a>.<br>
 	</font>
