--- a/papers.html
+++ b/papers.html
@@ -7,6 +7,14 @@
 	<font face="Arial" size="4" color="#800000">2025</font></i></b></p>
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM Editorial]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Editorial: TOSEM journal in 2025 and beyond
+		(<a href="./pdf/TOSEMeditorial2025.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), Editorial as Incoming EiC. </p>  
+	 
+
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> SpecRover: Code Intent Extraction via LLMs
 		(<a href="https://arxiv.org/abs/2408.02232">Paper</a>)</b></p>
