--- a/papers.html
+++ b/papers.html
@@ -11,13 +11,13 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Editorial: TOSEM journal in 2025 and beyond
 		(<a href="./pdf/TOSEMeditorial2025.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), Editorial as Incoming EiC. </p>  
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), Editorial as Incoming EiC, Jan 2025. </p>  
 	 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE25]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> SpecRover: Code Intent Extraction via LLMs
-		(<a href="https://arxiv.org/abs/2408.02232">Paper</a>)</b></p>
+		(<a href="./pdf/ICSE25.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Yuntong Zhang, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th International Conference on Software Engineering (ICSE) 2025. </p>  
 
@@ -27,7 +27,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Automatic Programming: Large Language Models and Beyond 
 		(<a href="https://arxiv.org/abs/2405.02213">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">MR Lyu, B Ray, Abhik Roychoudhury, Shin Hwei Tan, P Thongtanunam</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), 2025. </p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM Transactions on Software Engineering and Methodology (TOSEM), April 2025. </p> 
 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM25]</b></p>
